# theory-of-agent-trust

./: LICENSE  README.md  cross_protocol_governance.md  pyproject.toml  setup.py  theory_of_agent_trust_whitepaper.md
.pytest_cache/v/cache/: lastfailed  nodeids
src/agent_trust_stack/: __init__.py  cli.py  integration.py  trust_stack.py
tests/: test_integration.py
